# geomorphometry2025_workshop

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  geomorphometry_2025_workshop.ipynb  pyproject.toml  rst.csv  rst_1000.csv  runs.pack  tmp_list_simulated.txt  tmp_list_stream.txt
cgsSim/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  build  build.R
cgsSim/.github/linters/: .lintr
cgsSim/R/: auto_variogram_fit.R  optimize_kappa.R  plot_auto_variogram.R  prepare_pts.R  run_sim.R  smart_optim.R  zzz.R
cgsSim/demo/: 00Index  workflow.R
cgsSim/inst/cli/: cgs_simulation.R
cgsSim/inst/extdata/: dataframe.rds  elevrand.rds  gstat.rds  variorgram.rds  vgm_model.rds
cgsSim/man/: auto_variogram_fit.Rd  optimize_kappa.Rd  plot_auto_variogram.Rd  prepare_pts.Rd  run_sim.Rd  smart_optim.Rd
cgsSim/tests/: testthat.R
cgsSim/tests/testthat/: test_auto_variogram_fit.R  test_cgs_simulation.R  test_plot_auto_variogram.R  test_prepare_pts.R
cgsSim/vingnettes/: use.Rmd
