[project]
name = "geomorphometry2025-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "rpy2>=3.5.17",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipyleaflet>=0.19.2",
    "ipywidgets>=8.1.6",
    "ruff>=0.11.6",
]

[tool.ruff.lint]
preview = true
